--- a/css/style.css
+++ b/css/style.css
@@ -18,49 +18,6 @@ img {
 	max-width: 100%;
 }
 
-.written {
-	font-family: 'Quicksand', cursive;
-}
-
-header {
-	margin-top: 30px;
-	display: flex;
-	flex-wrap: wrap;
-}
-
-header h1,
-header a {
-	color: #94a4b1;
-	font-size: 60px;
-	text-decoration: none;
-	text-align: right;
-}
-
-header h2 {
-	font-size: 30px;
-	text-align: right;
-	color: #322214;
-}
-
-.headings-container {
-  width: 70%;
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.icon-container {
-  width: 30%;
-}
-
-.fifty {
-	width: 50%;
-}
-
-.hundred {
-	width: 100%;
-}
-
-
 /*------------ The side navigation menu -----------------*/
 .sidenav {
     height: 100%; /* 100% Full-height */
@@ -110,12 +67,60 @@ header h2 {
 }
 
 /* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
-@media screen and (max-height: 450px) {
+@media screen and (max-width: 450px) {
     .sidenav {padding-top: 15px;}
     .sidenav a {font-size: 18px;}
 }
 
 /*------------ END side navigation menu -----------------*/
+
+.written {
+	font-family: 'Quicksand', cursive;
+}
+
+header {
+	margin-top: 30px;
+	display: flex;
+	flex-wrap: wrap;
+}
+
+header h1,
+header a {
+	color: #94a4b1;
+	font-size: 60px;
+	text-decoration: none;
+	text-align: right;
+}
+
+header h2 {
+	font-size: 30px;
+	text-align: right;
+	color: #322214;
+}
+
+.fifty {
+	width: 50%;
+}
+
+.hundred {
+	width: 100%;
+}
+
+.headings-container {
+  width: 70%;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.icon-container {
+  width: 30%;
+}
+
+#icon {
+	max-width: 200px;
+	border-radius: 50%;
+}
+
 
 #project-container {
 	margin-top: 30px;
@@ -140,12 +145,13 @@ header h2 {
 }
 
 .project-box {
-	width: calc((100% - 12px)/3);
+	width: calc((100% - 32px)/3);
 	height: auto;
-	margin: 0 2px;
+	margin: 0 4px;
 	background-color: #7C898B;
 	text-align: center;
 	padding: 10px 0;
+	margin-bottom: 6px;
 }
 
 .project-box a {
@@ -154,7 +160,7 @@ header h2 {
 }
 
 .project-box img {
-	width: 90%
+	width: 90%;
 }
 
 .project-box h3 {
@@ -163,17 +169,55 @@ header h2 {
 
 .project-box h4 {
 	font-size: 20px;
+	margin-bottom: 5px;
 }
 
 .project-box p {
 	font-size: 20px;
 }
 
-#icon {
-	max-width: 200px;
-	border-radius: 50%;
-}
-
 .left-align {
 	text-align:
+}
+
+@media only screen and (max-width: 730px) {
+  .icon-container,
+  .headings-container {
+	width: 100%;
+  }
+  .social-buttons li {
+  	float: none;
+  	margin-left: auto;
+  	margin-right: auto;
+  }
+  #icon {
+  	margin-left: auto;
+	margin-right: auto;
+	width: 200px;
+	display: block;
+  }
+  header h1,
+  header a,
+  header h2,
+  header ul {
+    text-align: center;
+    margin: auto;
+  }
+  header ul {
+  	margin-top: -20px;
+  }
+  #icon {
+	margin: auto;
+  }
+  .project-box {
+    width: calc((100% - 32px)/2);
+    margin: 0 6px;
+    margin-bottom: 12px;
+  }
+}
+
+@media only screen and (max-width: 510px) {
+  .project-box {
+    width: calc(100% - 12px);
+  }
 }
