--- a/css/style.css
+++ b/css/style.css
@@ -193,8 +193,64 @@ header h2 {
 }
 
 .left-align {
-	text-align:
+	text-align: left;
 }
+
+#portfolio-piece-container {
+  width: 100%;
+  margin-top: 50px;
+}
+
+.description-container {
+  width: 100%;
+  margin: auto;
+}
+
+.description-container h1 {
+  color: #94a4b1;
+  font-size: 60px;
+  text-align: center;
+  width: 100%;
+}
+
+.description-container h2 {
+  font-size: 30px;
+  text-align: center;
+  color: #322214;
+  width: 100%;
+}
+
+.description-container h3 {
+  margin-top: 30px;
+  margin-bottom: 0px;
+  font-size: 20px;
+  display: inline;
+}
+
+#created-using {
+  margin-top: 30px;
+  margin-bottom: 0px;
+  font-size: 20px;
+  display: inline;
+}
+
+.icons-container { 
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  padding: 10px 10px 0px 10px;
+
+}
+
+.feature {
+  width: 10%;
+  margin: 10px;
+  padding: 10px;
+  list-style: none;
+  background-color: #94a4b1;
+  border: black 2px solid;
+}
+/*MEDIA QUERIES START HERE*/
 
 @media only screen and (max-width: 730px) {
   .icon-container,
