--- a/css/style.css
+++ b/css/style.css
@@ -66,6 +66,7 @@ p {
 }
 
 .contact-slide{
+  min-height: 50vh;
   width: 25%;
   text-align: center;
   background-color: rgba(0,0,0,0);
@@ -82,7 +83,8 @@ p {
 
 .contact-slide li {
   list-style: none;
-  padding-top: 30vh;
+  padding-top: 0;
+  padding-bottom: 15vh;
   font-size: 100px;
 }
 
@@ -323,6 +325,12 @@ h4, {
 
 /*    INFO BOX */
 
+#top-container {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+}
+
 #info-container {
   width: 100%;
   margin: auto;
@@ -331,10 +339,16 @@ h4, {
   min-height: 100vh;
 }
 
-#skills-container {
-  width: 80%;
+#about-info-container {
+  width: 50%;
   margin: auto;
-  padding-bottom: 40px;
+  padding: 0 25px 40px 25px;
+}
+
+#skills-container {
+  width: 50%;
+  margin: auto;
+  padding: 0 25px 20px 25px;
 }
 
 .info-box {
@@ -421,4 +435,15 @@ hr {
   padding: 10px;
   width: 100%;
   text-align: center;
+}
+
+.slide-header{
+  padding: 40px 0 20px 0;
+  text-align: center;
+  color: #00cc99;
+  width: 100%;
+}
+
+.black {
+  color: black;
 }
