--- a/css/responsivestyle.css
+++ b/css/responsivestyle.css
@@ -109,13 +109,22 @@
 /* fix phone backgrounds */
 @media only screen and (max-width: 500px) {
   #home {
-    background-image: url("../img/mobilehome.jpg");
+    background-image:
+        -webkit-image-set (
+            url("/img/mobilehome2.jpg") 1x,
+            url("/img/mobilehome.jpg") 2x );
   }
   #contact {
-    background-image: url("../img/mobilecontact.jpg");
+    background-image:        
+    -webkit-image-set (
+            url("/img/mobilecontact2.jpg") 1x,
+            url("/img/mobilecontact.jpg") 2x );
   }
   #about {
-    background-image: url("../img/mobileabout.jpg");
+    background-image:
+    -webkit-image-set (
+        url("/img/mobileabout2.jpg") 1x,
+        url("/img/mobileabout.jpg") 2x );
   }
 }
 
