--- a/css/style.css
+++ b/css/style.css
@@ -54,7 +54,7 @@ p {
   width: 100%;
   height: 100%;
   z-index: -10;
-  background: url(../img/hoeslide.jpg) no-repeat center center;
+  background: url(../img/mobilehome.jpg) no-repeat center center;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
