last fix of mobile bgs

--- a/css/responsivestyle.css
+++ b/css/responsivestyle.css
@@ -184,7 +184,7 @@
       background-size: cover;
   }
   #home {
-    background-image: url("../img/mobilehome copy.jpg");
+    background-image: url("../img/mobilehome.jpg");
       background-size: cover;
   }
   .info-box {
