--- a/css/style.css
+++ b/css/style.css
@@ -79,6 +79,7 @@ p {
 .contact-slide{
   min-height: 50vh;
   width: 25%;
+  padding-top: 25vh;
   text-align: center;
   background-color: rgba(0,0,0,0);
 }
@@ -261,6 +262,10 @@ h4, {
   margin: 5px;
 }
 
+.aboutbox h3 > .smaller {
+  font-size: 35px;
+}
+
 .aboutbox h3,
 .aboutbox h4,
 .aboutbox p {
@@ -295,6 +300,23 @@ h4, {
   border-radius: 5px;
   font-size: 15px;
   text-align: center;
+}
+
+.skills-list a {
+  display: inline;
+  padding: 5px 7px;
+  background-color: #00cc99 ;
+  color: white;
+  margin: 4px;
+  border-radius: 5px;
+  font-size: 15px;
+  text-align: center;
+  text-decoration: underline;
+}
+
+.skills-list a:hover {
+  color: white;
+  text-decoration: none;
 }
 
 .portfolio-desc {
