--- a/css/responsivestyle.css
+++ b/css/responsivestyle.css
@@ -115,6 +115,12 @@
   }
 }
 
+@media only screen and (max-width: 590px) {
+  .info-box {
+  	width: 50%;
+  }
+}
+
 
 @media only screen and (max-width: 500px) {
   #about {
