--- a/css/responsivestyle.css
+++ b/css/responsivestyle.css
@@ -1,3 +1,10 @@
+/* INFO
+==============================
+- Css by: Rob Hern
+- Version:1.0.0
+*/
+
+
     /* styles for MacBook Pro-sized screens and larger */
 @media only screen and (min-width: 1440px) {
   #about {
