--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,9 @@
+/* INFO
+==============================
+- Css by: Rob Hern
+- Version:1.0.0
+*/
+
 @import url('https://fonts.googleapis.com/css?family=Poppins|Raleway');
 
 * {
