--- a/css/style.scss
+++ b/css/style.scss
@@ -104,6 +104,7 @@ a.m10link {
     width: 100%;
     height: 100%;
     position: absolute;
+    background-repeat: no-repeat;
   }
 }
 #homepage{ 
