--- a/css/style.scss
+++ b/css/style.scss
@@ -164,6 +164,8 @@ a.m10link {
   max-width: 1300px;
   margin: auto;
   padding: 50px 10px 0 10px;
+      z-index: 500;
+    position: relative;
 }
 
 .homepage-header{
